# handbook

./: 404.html  CNAME  README.md  index.html  introduction.html  mkdocs.yml  mkdocs_github_authors.yaml  package.json  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  vercel.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  format.yml  links.yml  publish-handbook.yml  tag.yml
community/: index.html
community/community-engagement/: index.html
community/how-to-contribute/: index.html
company-guidelines/: index.html
contributions/: community-engagement.html  how-to-contribute.html
contributions/community-engagement/: index.html
contributions/how-to-contribute/: index.html
contributions/social-media-policy/: index.html
docs/: README.md  build_docs.js  build_docs.py  index.md  introduction.md  mkdocs_github_authors.yaml  postprocess.py
docs/community/: community-engagement.md  index.md
docs/company-guidelines/: index.md
docs/contributions/: how-to-contribute.md
docs/en/: CNAME  employee-security-compliance-requirements.md  index.md  introduction.md  isms-overview.md  robots.txt  security.md  vercel.json
docs/en/contributions/: community-engagement.md  how-to-contribute.md  publications.md  social-media-policy.md
docs/en/faq/: index.md
docs/en/finance/: index.md  referral-bonus.md  relocation.md  travel.md
docs/en/goals/: company-goals.md  okrs.md
docs/en/legal/: code-of-business-conduct-and-ethics.md  licenses.md  privacy-policy.md  team.md
docs/en/mission-vision-values/: index.md
docs/en/people/: career-progression.md  ic-levels.md  index.md  management-levels.md  onboarding.md  pto-policy.md
docs/en/people/careers/: index.md  levels-ic.md  levels-management.md
docs/en/security/: employee-security-compliance-requirements.md  isms.md  team.md
docs/en/team-roles/: index.md
docs/en/tools/: email-signatures.md  hardware.md  index.md  software.md
docs/en/workflows/: ci-testing.md  development.md  documentation.md  product-development.md
docs/finance/: index.md  relocation.md  travel.md
docs/goals/: okrs.md
docs/legal/: code-of-business-conduct-and-ethics.md
docs/mission-vision-values/: index.md
docs/overrides/: main.html
docs/overrides/javascript/: chat.js  client.js  extra.js  giscus.js
docs/overrides/partials/: comments.html  languages.html
docs/overrides/stylesheets/: style.css
docs/people/: pto-policy.md
docs/team-roles/: specific-roles.md
docs/tools/: developer-tools.md  email-signatures.md  hardware.md  index.md  learning-resources.md  software.md
docs/workflows/: ci-testing.md  development.md  product-development.md
employee-security-compliance-requirements/: index.html
faq/: index.html
finance/: index.html  travel.html
finance/referral-bonus/: index.html
finance/relocation/: index.html
finance/travel/: index.html
goals/: company-goals.html  okrs.html
goals/company-goals/: index.html
goals/okrs/: index.html
introduction/: index.html
isms-overview/: index.html
javascript/: extra.js  giscus.js
legal/: licenses.html  privacy-policy.html
legal/code-of-business-conduct-and-ethics/: index.html
legal/licenses/: index.html
legal/privacy-policy/: index.html
legal/team/: index.html
mission-vision-values/: index.html
people/: index.html
people/onboarding/: index.html
people/pto-policy/: index.html
search/: search_index.json
security/: index.html
security/employee-security-compliance-requirements/: index.html
security/isms/: index.html
security/team/: index.html
team-roles/: index.html  specific-roles.html
team-roles/specific-roles/: index.html
tools/: email-signatures.html  hardware.html  index.html  software.html
tools/developer-tools/: index.html
tools/email-signatures/: index.html
tools/hardware/: index.html
tools/learning-resources/: index.html
tools/software/: index.html
workflows/: ci-testing.html  development.html  documentation.html  product-development.html
workflows/ci-testing/: index.html
workflows/development/: index.html
workflows/documentation/: index.html
workflows/product-development/: index.html
